Correct sidebar sizing on small screens

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -18,7 +18,6 @@
 .sidebar {
     font-family: Verdana, Geneva, sans-serif;
     color: #616161;
-     max-width: 200px;
 }
 
 .reading-group {
